--- a/mp001.html
+++ b/mp001.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <title>Menu Responsivo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="midias.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1> Meu Site </h1>
         <span id="burger" class="material-symbols-outlined" onclick="clickmenu()">menu </span>
@@ -39,6 +40,15 @@
         </article>
     </main>
    <script>
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = "block"
+            } else {
+                itens.style.display = "none"
+            }
+        }
+
         function clickmenu() {
             if (itens.style.display == "block") {
                 itens.style.display = "none"
