--- a/tela/index.html
+++ b/tela/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="login">
+            <div id="imagem">
+                <!-- Aqui vai a imagem nas css -->   
+            </div>
+            <div id="Formulario">
+                <h1>Login</h1>
+                <p>Seja bem-Vindo(a) novamente. Faça login para acessar sua conta e podes fazer as configurações no seu ambiente </p>
+                <form action="login.php" method="post">
+
+                </form>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
