--- a/tela/index.html
+++ b/tela/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" >
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="midia-quiries.css">
@@ -15,9 +16,21 @@
             </div>
             <div id="Formulario">
                 <h1>Login</h1>
-                <p>Seja bem-Vindo(a) novamente. Faça login para acessar sua conta e podes fazer as configurações no seu ambiente </p>
-                <form action="login.php" method="post">
-
+                <p>Seja bem-Vindo(a) novamente. Faça login para acessar sua conta e podes fazer as configurações no seu ambiente. </p>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-icons md-dark">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu email" autocomplete="email">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                
+                        <span class="material-icons md-dark">vpn_key</span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a Senha <span class="material-icons md-dark">mail</span></a>
                 </form>
             </div>
         </section>
