--- a/Relogio Digital/index.html
+++ b/Relogio Digital/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relogio Digital</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <div class="relogio">
@@ -24,6 +24,6 @@
     </div>
 </div>
 
-<script src="script.js"></script>
+<script src="/Relogio Digital/assets/script.js"></script>
 </body>
 </html>
