--- a/Menu/index.html
+++ b/Menu/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
 </head>
@@ -27,7 +28,10 @@
                 </div>
 
                 <div class="mobile-menu-icon">
-                    <button onclick="menushow()"><img src="imagens/menu_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="menu"></button>
+                    <button onclick="menushow()"><span class="material-symbols-outlined">
+                        menu
+                        </span>
+                            </span> </button>
                 </div>
 
                 <div class="mobile-menu">
@@ -42,8 +46,9 @@
                     </div>
 
                 </div>
-            
         </nav>
     </header>
+
+    <script src="script.js"></script>
 </body>
 </html>
